# quantum-curiosity-guide

./: .gitignore  Dockerfile  README.md  index.html  nginx.conf  vite.config.ts
backend/: Dockerfile  README_testing.md  grover.ipynb  grover_api.py  pyproject.toml  pytest.ini  requirements.txt  run_hardware_tests.py  run_tests.py  test_grover_api.py  test_grover_api_live.py  test_grover_pytest.py
src/: App.tsx
src/components/: CircuitVisualization.tsx  GroverInterface.tsx  HardwareInterface.tsx  QuantumConcepts.tsx  QubitVisualization.tsx
src/pages/: Index.tsx
terraform/: README-deployment.md  deploy.sh  main.tf  outputs.tf  variables.tf
